ATLAS-1306: fix ticketMachine attributeType

--- a/frontend/src/app/pages/prm/tabs/stop-point/form/stop-point-complete-form/stop-point-complete-form.component.html
+++ b/frontend/src/app/pages/prm/tabs/stop-point/form/stop-point-complete-form/stop-point-complete-form.component.html
@@ -136,7 +136,7 @@
     dataCy="ticketMachine"
     label="PRM.STOP_POINTS.FORM.TICKET_MACHINE"
     optionTranslateLabelPrefix="PRM.ENUMS.STANDARD_ATTRIBUTE_TYPES."
-    [options]="standardAttributeTypes"
+    [options]="booleanOptionalAttributeTypes"
     [additionalLabelspace]="0"
   >
   </atlas-select>
