ATLAS-1306: impl change prm variant for frontend

--- a/frontend/src/app/pages/prm/tabs/stop-point/form/stop-point-complete-form/stop-point-complete-form.component.html
+++ b/frontend/src/app/pages/prm/tabs/stop-point/form/stop-point-complete-form/stop-point-complete-form.component.html
@@ -7,6 +7,7 @@
       label="PRM.STOP_POINTS.MEANS_OF_TRANSPORT_SUB_LABEL"
       [showUnknown]="false"
       [showInfo]="true"
+      [meansOfTransportToShows]="meansOfTransportToShows"
     ></means-of-transport-picker>
   </div>
   <div class="col-6" [formGroup]="form">
