--- a/frontend/src/app/pages/prm/tabs/relation/tab-detail/relation-tab-detail.component.html
+++ b/frontend/src/app/pages/prm/tabs/relation/tab-detail/relation-tab-detail.component.html
@@ -8,12 +8,115 @@
       [valueExtractor]="extractSloid"
       [displayExtractor]="displayExtractor"
       [additionalLabelspace]="10"
+      [disabled]="editing"
+      (selectChanged)="referencePointChanged($event)"
     >
     </atlas-select>
   </div>
   @if (selectedReferencePointSloid) {
-    <app-relation-detail [referencePointSloid]="selectedReferencePointSloid"
-                         [elementSloid]="elementSloid"
-    ></app-relation-detail>
+    <ng-container
+      *ngIf="{
+        relations: relations$ | async,
+        currentRelation: currentRelation$ | async
+      } as relationInfo"
+    >
+      <div *ngIf="relationInfo.relations && relationInfo.currentRelation" class="mt-3 mb-3">
+        <app-switch-version
+          [records]="relationInfo.relations"
+          [currentRecord]="relationInfo.currentRelation"
+          [switchDisabled]="editing"
+          (switchVersion)="versionChanged($event)"
+        ></app-switch-version>
+      </div>
+    </ng-container>
+
+    <h2 class="font-bold-2xl color-gray-900">
+      {{ 'PRM.RELATIONS.RELATION' | translate }} -
+      {{ 'COMMON.VERSION' | translate }}
+      {{ selectedRelationVersion }}
+    </h2>
+
+    <div class="col-6 pb-3 mt-4">
+      <h2 class="font-bold-2xl color-gray-900">
+        {{ 'FORM.KEY_DATA' | translate }}
+      </h2>
+      <form-date-range *ngIf="form" [formGroup]="form"></form-date-range>
+    </div>
+
+    <h2 class="font-bold-2xl color-gray-900 mt-3">
+      {{ 'FORM.SUPPLEMENTARY_INFORMATION' | translate }}
+    </h2>
+
+    <div class="col-12 d-flex mt-4">
+      <div class="d-flex flex-column col-4 pe-3">
+        <atlas-select
+          *ngIf="form"
+          [formGroup]="form"
+          [options]="stepFreeAccessOptions"
+          controlName="stepFreeAccess"
+          dataCy="stepFreeAccess"
+          label="PRM.RELATIONS.STEP_FREE_ACCESS"
+          optionTranslateLabelPrefix="PRM.ENUMS.STEP_FREE_ACCESS_TYPES."
+          [additionalLabelspace]="0"
+        >
+        </atlas-select>
+      </div>
+      <div class="d-flex flex-column col-4 pe-3">
+        <atlas-select
+          *ngIf="form"
+          [formGroup]="form"
+          [options]="tactileVisualMarkOptions"
+          controlName="tactileVisualMarks"
+          dataCy="tactileVisualMarks"
+          label="PRM.RELATIONS.TACTIL_VISUAL_MARKS"
+          optionTranslateLabelPrefix="PRM.ENUMS.TACTILE_VISUAL_MARK_TYPES."
+          [additionalLabelspace]="0"
+        >
+        </atlas-select>
+      </div>
+      <div class="d-flex flex-column col-4">
+        <atlas-select
+          *ngIf="form"
+          [formGroup]="form"
+          [options]="contrastingAreaOptions"
+          controlName="contrastingAreas"
+          dataCy="contrastingAreas"
+          label="PRM.RELATIONS.CONTRASTING_AREAS"
+          optionTranslateLabelPrefix="PRM.ENUMS.STANDARD_ATTRIBUTE_TYPES."
+          [additionalLabelspace]="0"
+        >
+        </atlas-select>
+      </div>
+    </div>
   }
 </atlas-detail-page-content>
+@if (selectedReferencePointSloid) {
+  <atlas-detail-footer>
+    <atlas-button
+      *ngIf="!editing"
+      (buttonClicked)="toggleEdit()"
+      applicationType="PRM"
+      [businessOrganisations]="businessOrganisations"
+      buttonDataCy="edit"
+      buttonText="COMMON.EDIT"
+      buttonType="edit-service-point-dependent"
+      wrapperStyleClass="ms-3"
+    ></atlas-button>
+    <atlas-button
+      (buttonClicked)="toggleEdit()"
+      [footerEdit]="editing"
+      buttonDataCy="cancel"
+      buttonText="COMMON.CANCEL"
+      buttonType="whiteFooterEdit"
+    ></atlas-button>
+    <atlas-button
+      (buttonClicked)="save()"
+      [footerEdit]="editing"
+      [disabled]="!form?.dirty"
+      buttonDataCy="save"
+      buttonText="COMMON.SAVE"
+      buttonType="whiteFooterEdit"
+      wrapperStyleClass="ms-3"
+    ></atlas-button>
+  </atlas-detail-footer>
+}
