ATLAS-1306: meansOfTransportPicker clean up

--- a/frontend/src/app/pages/prm/tabs/stop-point/form/stop-point-reduced-form/stop-point-reduced-form.component.html
+++ b/frontend/src/app/pages/prm/tabs/stop-point/form/stop-point-reduced-form/stop-point-reduced-form.component.html
@@ -5,9 +5,8 @@
       controlName="meansOfTransport"
       [disabled]="isNew"
       label="PRM.STOP_POINTS.MEANS_OF_TRANSPORT_SUB_LABEL"
-      [showUnknown]="false"
       [showInfo]="true"
-      [meansOfTransportToShows]="meansOfTransportToShows"
+      [meansOfTransportToShow]="meansOfTransportToShow"
     ></means-of-transport-picker>
   </div>
 </div>
