--- a/frontend/src/app/pages/prm/tabs/stop-point/create-stop-point/create-stop-point.component.html
+++ b/frontend/src/app/pages/prm/tabs/stop-point/create-stop-point/create-stop-point.component.html
@@ -20,6 +20,7 @@
             [disabled]="false"
             label="PRM.STOP_POINTS.MEANS_OF_TRANSPORT_SUB_LABEL"
             [showInfo]="true"
+            [meansOfTransportToShow]="meansOfTransportToShow"
           ></means-of-transport-picker>
         </div>
         <div class="d-flex flex-column col-2">
