--- a/frontend/src/app/pages/prm/tabs/stop-point/form/stop-point-reduced-form/stop-point-reduced-form.component.html
+++ b/frontend/src/app/pages/prm/tabs/stop-point/form/stop-point-reduced-form/stop-point-reduced-form.component.html
@@ -3,7 +3,7 @@
     <means-of-transport-picker
       [formGroup]="form"
       controlName="meansOfTransport"
-      [disabled]="isNew"
+      [disabled]="isNew || !form.enabled"
       label="PRM.STOP_POINTS.MEANS_OF_TRANSPORT_SUB_LABEL"
       [showInfo]="true"
       [meansOfTransportToShow]="meansOfTransportToShow"
