ATLAS-1421: wip: relation detail with tests

--- a/frontend/src/app/pages/prm/tabs/relation/tab-detail/relation-tab-detail.component.html
+++ b/frontend/src/app/pages/prm/tabs/relation/tab-detail/relation-tab-detail.component.html
@@ -25,7 +25,10 @@
           [records]="relationInfo.relations"
           [currentRecord]="relationInfo.currentRelation"
           [switchDisabled]="editing"
-          (switchVersion)="versionChanged($event)"
+          [showStatus]="false"
+          (switchVersion)="
+            versionChanged(relationInfo.relations[$event]); selectedRelationVersion = $event + 1
+          "
         ></app-switch-version>
       </div>
     </ng-container>
