ATLAS-1421: add relation tab to parking lot

--- a/frontend/src/app/pages/prm/tabs/platform/detail/platform-detail-panel.component.html
+++ b/frontend/src/app/pages/prm/tabs/platform/detail/platform-detail-panel.component.html
@@ -27,6 +27,10 @@
     </div>
   </div>
 
-  <prm-detail-with-relation-tab [isNew]="isNew" [reduced]="reduced" detailTitle="PRM.TABS.PLATFORM"></prm-detail-with-relation-tab>
+  <prm-detail-with-relation-tab
+    [isNew]="isNew"
+    [reduced]="reduced"
+    detailTitle="PRM.TABS.PLATFORM"
+  ></prm-detail-with-relation-tab>
 
 </atlas-detail-page-container>
