--- a/frontend/src/app/pages/prm/tabs/parking-lot/detail/parking-lot-detail-panel.component.html
+++ b/frontend/src/app/pages/prm/tabs/parking-lot/detail/parking-lot-detail-panel.component.html
@@ -4,17 +4,7 @@
     {{ 'PRM.PARKING_LOTS.PARKING_LOT' | translate }}
     {{ isNew ? '' : selectedVersion.designation }}
   </div>
-  <div *ngIf="!isNew" class="font-xl mb-2">
-      <span data-cy="total-range">
-        <date-range-text [dateRange]="maxValidity"></date-range-text>
-      </span>
-  </div>
-  <div *ngIf="!isNew" class="d-flex flex-row mb-5">
-    <div class="d-flex flex-column me-5" data-cy="selected-version-sloid">
-      <div class="font-bold-base">{{ 'SEPODI.SERVICE_POINTS.SLOID' | translate }}</div>
-      <div>{{ selectedVersion.sloid }}</div>
-    </div>
-  </div>
+  <prm-detail-panel [isNew]="isNew" [selectedVersion]="selectedVersion" [maxValidity]="maxValidity"></prm-detail-panel>
 
   <prm-detail-with-relation-tab
     [isNew]="isNew"
