--- a/frontend/src/app/pages/prm/tabs/platform/detail/platform-detail-panel.component.html
+++ b/frontend/src/app/pages/prm/tabs/platform/detail/platform-detail-panel.component.html
@@ -29,7 +29,7 @@
 
   <prm-detail-with-relation-tab
     [isNew]="isNew"
-    [reduced]="reduced"
+    [isReduced]="isReduced"
     detailTitle="PRM.TABS.PLATFORM"
   ></prm-detail-with-relation-tab>
 
