--- a/frontend/src/app/pages/prm/tabs/toilet/detail/toilet-detail-panel.component.html
+++ b/frontend/src/app/pages/prm/tabs/toilet/detail/toilet-detail-panel.component.html
@@ -8,7 +8,7 @@
 
   <prm-detail-with-relation-tab
     [isNew]="isNew"
-    [reduced]="reduced"
+    [isReduced]="isReduced"
     detailTitle="PRM.TABS.TOILET"
   ></prm-detail-with-relation-tab>
 
