ATLAS-1568: Sboid fdisplay for gos

--- a/frontend/src/app/pages/prm/prm-panel/prm-panel.component.html
+++ b/frontend/src/app/pages/prm/prm-panel/prm-panel.component.html
@@ -21,7 +21,8 @@
         <div class="font-bold-base">
           {{ 'BODI.BUSINESS_ORGANISATION.BUSINESS_ORGANISATION' | translate }}
         </div>
-        <div>{{ selectedBusinessOrganisation?.organisationNumber }} - {{ boDescription }}</div>
+        <div>{{ selectedBusinessOrganisation?.organisationNumber }} - {{ boDescription }} -
+          {{ selectedBusinessOrganisation?.sboid }}</div>
       </div>
     </div>
 
