--- a/frontend/src/app/core/form-components/bo-select/business-organisation-select.component.html
+++ b/frontend/src/app/core/form-components/bo-select/business-organisation-select.component.html
@@ -15,7 +15,7 @@
     <div *ngIf="formModus" class="font-regular-sm">
       {{ 'BODI.BUSINESS_ORGANISATION.ORGANISATION_NUMBER' | translate }} -
       {{ 'BODI.BUSINESS_ORGANISATION.ABBREVIATION' | translate }} -
-      {{ 'BODI.BUSINESS_ORGANISATION.DESCRIPTION' | translate }} - SAID
+      {{ 'BODI.BUSINESS_ORGANISATION.DESCRIPTION' | translate }} - SBOID
     </div>
   </div>
   <div
