ATLAS-1541: add 1. sepodi e2e use case

--- a/frontend/src/app/pages/sepodi/service-point-side-panel/service-point/service-point-creation/service-point-creation.component.html
+++ b/frontend/src/app/pages/sepodi/service-point-side-panel/service-point/service-point-creation/service-point-creation.component.html
@@ -1,11 +1,12 @@
 <atlas-detail-page-container>
-  <div class="font-bold-4xl mb-3">
+  <div class="font-bold-4xl mb-3" data-cy="new-service-point-label">
     {{ 'SEPODI.SERVICE_POINTS.NEW_SERVICE_POINT' | translate }}
   </div>
 
   <atlas-detail-page-content>
     <div class="d-flex">
       <atlas-select
+        dataCy="select-country"
         class="col-6 pe-3"
         label="COMMON.COUNTRY"
         [additionalLabelspace]="25"
