--- a/frontend/src/app/pages/sepodi/map/map.component.html
+++ b/frontend/src/app/pages/sepodi/map/map.component.html
@@ -2,7 +2,7 @@
   <div class="map" #map></div>
   <div *ngIf="!isSidePanelOpen" class="container-sp-create-and-search">
     <app-search-service-point [searchType]="this.servicePointSearchType"></app-search-service-point>
-    <button *ngIf="canCreateServicePoint" (click)="routeToNewSP()" class="font-regular-base">
+    <button *ngIf="canCreateServicePoint" (click)="routeToNewSP()" class="font-regular-base" data-cy="new-service-point-button">
       <i class="bi bi-plus"></i>
       {{ 'SEPODI.SERVICE_POINTS.NEW_SERVICE_POINT' | translate }}
     </button>
