ATLAS-1541: add swiss stopPoint e2e use case

--- a/frontend/src/app/pages/sepodi/service-point-side-panel/service-point/service-point-detail.component.html
+++ b/frontend/src/app/pages/sepodi/service-point-side-panel/service-point/service-point-detail.component.html
@@ -123,7 +123,7 @@
     [applicationType]="'SEPODI'"
     [hidden]="selectedVersion?.status !== 'DRAFT'"
     [disabled]="isSwitchVersionDisabled"
-    buttonDataCy="revoke-item"
+    buttonDataCy="skip-workflow"
     buttonText="WORKFLOW.BUTTON.SKIP"
     buttonType="skipworkflow"
     wrapperStyleClass="ms-3"
