--- a/frontend/src/app/core/search-service-point/search-service-point.component.html
+++ b/frontend/src/app/core/search-service-point/search-service-point.component.html
@@ -7,6 +7,7 @@
   </div>
 
   <ng-select
+    data-cy="search-service-point-select"
     autofocus="true"
     [items]="servicePointSearchResult$ | async"
     [typeahead]="searchInput$"
