ATLAS-1541: improve stopPoint e2e stability

--- a/frontend/src/app/core/search-service-point/search-service-point.component.html
+++ b/frontend/src/app/core/search-service-point/search-service-point.component.html
@@ -1,4 +1,4 @@
-<div class="search-form">
+<div class="search-form" data-cy="search-sepodi-form">
   <div class="d-flex flex-column">
     <mat-label class="font-bold-sm pb-2">
       {{ 'SEPODI.SERVICE_POINTS.DIDOK_CODE_SEARCH' | translate }} -
