--- a/frontend/src/app/pages/sepodi/traffic-point-elements/traffic-point-elements-detail.component.html
+++ b/frontend/src/app/pages/sepodi/traffic-point-elements/traffic-point-elements-detail.component.html
@@ -1,5 +1,5 @@
 <atlas-detail-page-container>
-  <div class="font-bold-4xl detail-title mb-3">
+  <div class="font-bold-4xl detail-title mb-3" data-cy="traffic-point-header">
     {{
       isTrafficPointArea
         ? ('SEPODI.BOARDING_AREAS.BOARDING_AREAS' | translate)
@@ -12,7 +12,7 @@
       <date-range-text [dateRange]="maxValidity"></date-range-text>
     </span>
   </div>
-  <div class="d-flex flex-row mb-5">
+  <div class="d-flex flex-row mb-5" data-cy="traffic-point-header-title">
     <div class="d-flex flex-column me-5" *ngIf="!isNew">
       <div class="font-bold-base">{{ 'SEPODI.SERVICE_POINTS.SLOID' | translate }}</div>
       <div>{{ selectedVersion.sloid }}</div>
