ATLAS-1854: add complete variant

--- a/frontend/src/app/pages/prm/tabs/platform/detail/detail/platform-detail.component.html
+++ b/frontend/src/app/pages/prm/tabs/platform/detail/detail/platform-detail.component.html
@@ -78,7 +78,7 @@
     (buttonClicked)="save()"
     [footerEdit]="form.enabled"
     [disabled]="!form.dirty"
-    buttonDataCy="save"
+    buttonDataCy="save-item"
     buttonText="COMMON.SAVE"
     buttonType="whiteFooterEdit"
     wrapperStyleClass="ms-3"
