--- a/frontend/src/app/pages/prm/tabs/stop-point/create-stop-point/create-stop-point.component.html
+++ b/frontend/src/app/pages/prm/tabs/stop-point/create-stop-point/create-stop-point.component.html
@@ -28,7 +28,7 @@
             (click)="checkSelection()"
             [disabled]="false"
             [submitButton]="true"
-            buttonDataCy="save-item"
+            buttonDataCy="stepper-next"
             buttonText="PRM.STOP_POINTS.NEXT"
             buttonType="confirm"
             wrapperStyleClass="ms-3"
@@ -44,7 +44,7 @@
             (click)="backSelection()"
             [disabled]="false"
             [submitButton]="true"
-            buttonDataCy="save-item"
+            buttonDataCy="stepper-back"
             buttonText="PRM.STOP_POINTS.BACK"
             buttonType="confirm"
             wrapperStyleClass="ms-3"
