--- a/frontend/src/app/pages/prm/tabs/reference-point/detail/reference-point-detail.component.html
+++ b/frontend/src/app/pages/prm/tabs/reference-point/detail/reference-point-detail.component.html
@@ -80,7 +80,7 @@
       (buttonClicked)="save()"
       [footerEdit]="form.enabled"
       [disabled]="!form.dirty"
-      buttonDataCy="save"
+      buttonDataCy="save-item"
       buttonText="COMMON.SAVE"
       buttonType="whiteFooterEdit"
       wrapperStyleClass="ms-3"
