--- a/frontend/src/app/pages/prm/tabs/relation/tab-detail/relation-tab-detail.component.html
+++ b/frontend/src/app/pages/prm/tabs/relation/tab-detail/relation-tab-detail.component.html
@@ -125,7 +125,7 @@
     (buttonClicked)="save()"
     [footerEdit]="editing"
     [disabled]="!form?.dirty"
-    buttonDataCy="save"
+    buttonDataCy="save-item"
     buttonText="COMMON.SAVE"
     buttonType="whiteFooterEdit"
     wrapperStyleClass="ms-3"
