--- a/frontend/src/app/pages/prm/tabs/toilet/detail/detail/toilet-detail.component.html
+++ b/frontend/src/app/pages/prm/tabs/toilet/detail/detail/toilet-detail.component.html
@@ -62,7 +62,7 @@
     (buttonClicked)="save()"
     [footerEdit]="form.enabled"
     [disabled]="!form.dirty"
-    buttonDataCy="save"
+    buttonDataCy="save-item"
     buttonText="COMMON.SAVE"
     buttonType="whiteFooterEdit"
     wrapperStyleClass="ms-3"
