ATLAS-1854: remove duplications

--- a/frontend/src/app/pages/prm/tabs/contact-point/detail/detail/contact-point-detail.component.html
+++ b/frontend/src/app/pages/prm/tabs/contact-point/detail/detail/contact-point-detail.component.html
@@ -63,7 +63,7 @@
     (buttonClicked)="save()"
     [footerEdit]="form.enabled"
     [disabled]="!form.dirty"
-    buttonDataCy="save-item"
+    buttonDataCy="save"
     buttonText="COMMON.SAVE"
     buttonType="whiteFooterEdit"
     wrapperStyleClass="ms-3"
