--- a/frontend/src/app/core/form-components/date-range/today-and-future-timetable-header/today-and-future-timetable-header.component.html
+++ b/frontend/src/app/core/form-components/date-range/today-and-future-timetable-header/today-and-future-timetable-header.component.html
@@ -1,5 +1,6 @@
-<div class="d-flex col-12 mb-3">
+<div class="d-flex col-12">
   <button mat-button class="me-auto color-primary-600" (click)="selectToday()">{{ 'COMMON.TODAY'|translate }}</button>
   <button mat-button class="color-primary-600" (click)="selectFutureTimetable()">{{ 'COMMON.TIMETABLE_YEAR_CHANGE'|translate }}
   </button>
 </div>
+<mat-calendar-header></mat-calendar-header>
