ATLAS-1893: Update texts and fix form.dirty unavailability on missing create

--- a/frontend/src/app/pages/prm/tabs/stop-point/detail/stop-point-detail.component.html
+++ b/frontend/src/app/pages/prm/tabs/stop-point/detail/stop-point-detail.component.html
@@ -68,6 +68,7 @@
     ></atlas-button>
   </ng-container>
   <atlas-button
+    *ngIf="form"
     (click)="save()"
     [footerEdit]="isNew || ((isFormEnabled$ | async) ?? false)"
     [disabled]="!form.dirty"
