ATLAS-1857: Fix translations.

--- a/frontend/src/app/pages/ttfn/overview/timetable-field-number-overview.component.html
+++ b/frontend/src/app/pages/ttfn/overview/timetable-field-number-overview.component.html
@@ -9,7 +9,7 @@
 
   <div class="white-table-container-no-tabs mt-5">
     <div class="table-heading font-bold-4xl color-gray-900 mb-5">
-      {{ 'PAGES.TTFN.TITLE_MENU' | translate }}
+      {{ 'PAGES.TTFN.TITLE_HEADER' | translate }}
     </div>
 
     <app-table
