ATLAS-1931: Change Info Icons

--- a/frontend/src/app/pages/sepodi/map/map.component.html
+++ b/frontend/src/app/pages/sepodi/map/map.component.html
@@ -24,7 +24,7 @@
     </div>
   </div>
   <button mat-icon-button class="map-legend-button" (click)="toggleLegend()">
-    <em class="bi bi-info-circle-fill"></em>
+    <em class="bi bi-geo-alt-fill"></em>
   </button>
   <div *ngIf="showMapLegend" class="map-legend map-popup-menu">
     <div class="popup-content">
