ATLAS-1944: fix problems

--- a/frontend/src/app/core/components/base-detail/base-detail.component.html
+++ b/frontend/src/app/core/components/base-detail/base-detail.component.html
@@ -48,7 +48,7 @@
                 'COMMON.STATUS_TYPES.' + controller.statusOfCurrentRecord | translate
               }}</span>
           </div>
-          <div *ngIf="workflowEnabled && controller.form.disabled">
+          <div *ngIf="controller.form.disabled">
             <app-workflow
               *ngIf="controller.isWorkflowable()"
               [descriptionForWorkflow]="this.controller.getDescriptionForWorkflow()"
