ATLAS-1656 added two new colums at tth

--- a/frontend/src/app/core/components/table/table.component.scss
+++ b/frontend/src/app/core/components/table/table.component.scss
@@ -23,3 +23,9 @@ table {
   display: flex;
   justify-content: space-between;
 }
+
+.attachment {
+  display: flex;
+  font-size: 24px;
+  justify-content: center;
+}
