--- a/frontend/src/app/core/components/table/table.component.html
+++ b/frontend/src/app/core/components/table/table.component.html
@@ -44,7 +44,7 @@
           </div>
         </th>
         <div
-          *ngIf="!column.checkbox && !column.dropdown && !column.button"
+          *ngIf="!column.checkbox && !column.dropdown && !column.button && !column.icon"
           [ngSwitch]="!!column.getTitle"
         >
           <ng-template [ngSwitchCase]="true">
@@ -90,6 +90,14 @@
               (click)="$event.stopPropagation()"
               [checked]="checkBoxSelection.isSelected(row)"
             ></mat-checkbox>
+          </td>
+        </div>
+        <div *ngIf="column.icon">
+          <p>test</p>
+          <td *matCellDef="let row" class="table-cell bordered-cell" mat-cell>
+            <i
+              class="attachment {{ column.icon.icon}}"
+            ></i>
           </td>
         </div>
         <div *ngIf="column.button">
