ATLAS-1656 added test coverage, refactor

--- a/frontend/src/app/core/components/table/table.component.scss
+++ b/frontend/src/app/core/components/table/table.component.scss
@@ -24,7 +24,7 @@ table {
   justify-content: space-between;
 }
 
-.attachment {
+.icon {
   display: flex;
   font-size: 24px;
   justify-content: center;
