--- a/frontend/src/app/core/components/table/table.component.html
+++ b/frontend/src/app/core/components/table/table.component.html
@@ -44,7 +44,7 @@
           </div>
         </th>
         <div
-          *ngIf="!column.checkbox && !column.dropdown && !column.button"
+          *ngIf="!column.checkbox && !column.dropdown && !column.button && !column.icon"
           [ngSwitch]="!!column.getTitle"
         >
           <ng-template [ngSwitchCase]="true">
@@ -66,8 +66,7 @@
               class="table-cell bordered-cell"
               mat-cell
             >
-              <i *ngIf="(value[column.value] | format: column)" [class]="column.icon?.icon"></i>
-              {{ column.value !== 'documents' ? (value[column.value] | format: column) : ''}}
+              {{ value[column.value] | format: column }}
             </td>
           </ng-template>
         </div>
@@ -116,6 +115,12 @@
                 ></i>
               </ng-template>
             </atlas-button>
+          </td>
+        </div>
+
+        <div *ngIf="column.icon">
+          <td *matCellDef="let value" class="table-cell bordered-cell" mat-cell>
+              <i *ngIf="(value[column.value] | format: column)" [class]="'icon ' + column.icon?.icon"></i>
           </td>
         </div>
       </ng-container>
