ATLAS-1669: Small fixes after generating files.

--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -190,7 +190,7 @@
               ]"
                 [formGroup]="form.controls.statementSender"
                 [required]="true"
-                controlName="email"
+                controlName="emails"
                 fieldLabel="TTH.STATEMENT.E_MAIL"
               >
               </atlas-text-field>
