ATLAS-2064: prevent double workflows in progress

--- a/frontend/src/app/core/workflow/dialog/workflow-dialog.component.html
+++ b/frontend/src/app/core/workflow/dialog/workflow-dialog.component.html
@@ -36,6 +36,7 @@
         (click)="startWorkflow()"
         class="atlas-primary-btn primary-color-btn"
         data-cy="dialog-confirm-button"
+        [disabled]="workflowStartFormGroup.disabled"
       >
         {{ data.confirmText ?? 'DIALOG.OK' | translate }}
       </button>
