--- a/frontend/src/app/pages/tth/statement/statement-detail.component.html
+++ b/frontend/src/app/pages/tth/statement/statement-detail.component.html
@@ -15,7 +15,7 @@
             [short]="true"
           ></app-user-detail-info>
 
-          <p *ngIf="statement?.oldSwissCanton">{{ 'TTH.STATEMENT.STATEMENT_TRANSFER_COUNTRY' | translate:{ oldSwissCanton: cantonName } }}</p>
+          <p *ngIf="statement?.oldSwissCanton">{{ 'TTH.STATEMENT.STATEMENT_TRANSFER_COUNTRY' | translate:{ oldSwissCanton: (statement?.oldSwissCanton! | displayCanton) } }}</p>
 
           <div *ngIf="statement && statement.comment" class="d-flex flex-row col-12 mb-5">
             <div class="d-flex flex-column col-12">
